# Monkey

./: .gitignore  LICENSE  README.md  ROADMAP.md  requirements.txt  setup.py
OneDrive/Desktop/ZenCrawl/: ABOUT.MD  Dockerfile  FLOW.MD  IMP.MD  links.txt  my_links.txt  package-lock.json  package.json  result.json  test-playwright.js  tsconfig.json  zen.json
OneDrive/Desktop/ZenCrawl/landing/: tailwind.config.ts
OneDrive/Desktop/ZenCrawl/src/: index.ts  test-redis.js  test-redis.ts
OneDrive/Desktop/ZenCrawl/src/api/routes/: crawl.ts  map.ts  scrape.ts  search.ts
OneDrive/Desktop/ZenCrawl/src/scrapers/: BaseScraper.ts  MapScraper.ts
OneDrive/Desktop/ZenCrawl/src/utils/: logger.ts
monkey/: README.md  adk_example.py  pyproject.toml
monkey/monkey/: __init__.py  agent.py  crawler.py  scrape.py  screenshot_manager.py
monkey/monkey/shared_libraries/: __init__.py  constants.py
